# semantic_intent_cache

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-anthropic.txt  requirements-dev.txt  requirements.txt
scripts/: tenant_match_smoke.py
src/semantic_intent_cache/: __init__.py  cli.py  config.py  sdk.py  types.py
src/semantic_intent_cache/api/: __init__.py  app.py
src/semantic_intent_cache/embeddings/: __init__.py  base.py  bedrock_client.py  st_local.py  titan_embedder.py
src/semantic_intent_cache/store/: __init__.py  redis_store.py
src/semantic_intent_cache/variants/: __init__.py  anthropic_variants.py  base.py  builtin.py
tests/: conftest.py
tests/integration/: test_api_integration.py  test_intent_accuracy_comparison.py  test_sdk_vs_llm_benchmark.py
tests/unit/: test_embeddings.py  test_redis_store_unit.py  test_sdk_unit.py  test_variants.py
